First sweater commit.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,30 @@
-spring.datasource.url=jdbc:postgresql://localhost/sweater
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://178.0.0.3:5432/sweater
+spring.datasource.username=schoolupdate
+spring.datasource.password=Z6h6PQEhySdJSbDCM4bjAe9Sm6rAcC9ySPKgRvpP
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
-
+server.port=8081
 spring.freemarker.expose-request-attributes=true
 
-upload.path=/home/dru/uploads
+upload.path=/uploads
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+        spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.mail.host=smtp.yandex.ru
-spring.mail.username=uw@dru.su
-spring.mail.password=12345678
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=alexsut76@gmail.com
+spring.mail.password=Cnfkrth1
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=false
+spring.servlet.multipart.max-file-size=100MB
 
-recaptcha.secret=6LduQVoUAAAAACpkNtp9c5WWgyGENzIxZqF9SbZL
+
+spring.flyway.clean-disabled=false
+
+recaptcha.secret=6Lewp20UAAAAAMkCVModY6qpyfRmoEwQpPFYlgAK
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
