--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost/sweater
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://178.0.0.3:5432/sweater
+spring.datasource.username=schoolupdate
+spring.datasource.password=Z6h6PQEhySdJSbDCM4bjAe9Sm6rAcC9ySPKgRvpP
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=/home/dru/dev/sweater/uploads
+upload.path=/uploads
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
