--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://178.0.0.3:5432/sweater
-spring.datasource.username=schoolupdate
-spring.datasource.password=Z6h6PQEhySdJSbDCM4bjAe9Sm6rAcC9ySPKgRvpP
+spring.datasource.url=jdbc:postgresql://localhost:5432/sweater
+spring.datasource.username=postgres
+spring.datasource.password=password
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
